--- a/templates/base.html
+++ b/templates/base.html
@@ -19,9 +19,10 @@
     Добро пожаловать в инструмент получения и построения графиков биржевых данных.
 </li>
  <hr>
-<a href="/pages/input" class="flex jastify-between text-3xl my3">
-    <botton> введите тикер и период </botton>
-</a>
 
+<a href="/pages/input"  class="flex jastify-between text-4xl my3">
+
+     <button type="button" style="color: red;"><b>ведите тикер и период </b></button>
+</a>
 </body>
 </html>
