--- a/templates/input.html
+++ b/templates/input.html
@@ -15,19 +15,19 @@
     <p>  Введите порог колебания акций относительно средней цены закрытия в процентах (по умолчанию 20%) </p>
 </li>
  <br>
-<h2>Форма ввода</h2>
+<h2>Введите  данные для получения информации об эмитенте</h2>
     <form action="postdata" method="post">
         <p>
-            ticker:<br>
+            ticker:
             <input name="ticker" />
         </p>
         <p>
-            period:<br>
-            <input name="period" type="number" />
+            period:
+            <input name="period" type="number"/>
         </p>
         <p>
-            threshold:<br>
-            <input name="threshold" type="number" />
+            Начальная дата:
+            <input name="start_date" type="date" />
         </p>
         <input type="submit" value="Send" />
     </form>
