--- a/templates/output.html
+++ b/templates/output.html
@@ -16,6 +16,8 @@
         <img src="{{RSI}}">
         <img src="{{Stock}}">
     </div>
+ <br>
+ <iframe src="../py.log">   </iframe>
 {% endblock %}
 <button><a href="/">Вернуться на главную страницу </a></button>
 <button><a href="/pages/input">Вернуться на страницу ввода эмитента</a></button>
