--- a/templates/output.html
+++ b/templates/output.html
@@ -17,7 +17,9 @@
         <img src="{{Stock}}">
     </div>
  <br>
-
+    {{info_}}
+ <br>
+ <br>
 {% endblock %}
 <button><a href="/">Вернуться на главную страницу </a></button>
 <button><a href="/pages/input">Вернуться на страницу ввода эмитента</a></button>
