--- a/templates/output.html
+++ b/templates/output.html
@@ -10,19 +10,17 @@
 <body>
  <br>
  {% block content%}
-<h2>Форма вывода</h2>
+
+<h2>{{info_}}</h2>
     <div>
         <img src="{{MCAD}}">
         <img src="{{RSI}}">
         <img src="{{Stock}}">
     </div>
- <br>
-    {{info_}}
- <br>
+
  <br>
 {% endblock %}
 <button><a href="/">Вернуться на главную страницу </a></button>
 <button><a href="/pages/input">Вернуться на страницу ввода эмитента</a></button>
 </body>
 </html>
-
