Вывод информации на HTML 1

--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,7 @@
 
 <a href="/pages/input"  class="flex jastify-between text-4xl my3">
 
-     <button type="button" style="color: red;"><b>Введите тикер и период </b></button>
+     <button type="button" style="color: red;"><b>На страницу ввода  </b></button>
 </a>
 </body>
 </html>
