Улудшение вывода информации на HTML 1

--- a/templates/input.html
+++ b/templates/input.html
@@ -11,7 +11,7 @@
 <li class="flex jastify-between text-3xl my3">
     <p style="color: red;">   Добро пожаловать в инструмент получения и построения графиков биржевых данных.  </p>
     <p>    Введите тикер акции (например, SNGSP для Сургутнефтегаза, GAZP газпром, SBER сбербанк)  </p>
-    <p>    Введите начальную дату </p>
+    <p>    Введите начальную дату. Если не вводить, то будет запрос за весь период существования эмитента</p>
     <p>  Введите период для данных (1 - 1 минута,   10 - 10 минут,   60 - 1 час,   24 - 1 день,   7 - 1 неделя,  31 - 1 месяц )</p>
 
 </li>
