--- a/templates/output.html
+++ b/templates/output.html
@@ -12,6 +12,8 @@
  {% block content%}
 
 <h2>{{info_}}</h2>
+<h3>Интервал: {{interval}}</h3>
+
     <div>
         <img src="{{MCAD}}">
         <img src="{{RSI}}">
