--- a/templates/output.html
+++ b/templates/output.html
@@ -23,5 +23,6 @@
 {% endblock %}
 <button><a href="/">Вернуться на главную страницу </a></button>
 <button><a href="/pages/input">Вернуться на страницу ввода эмитента</a></button>
+<button><a href="/pages/delete">Очистка static</a></button>
 </body>
 </html>
