--- a/templates/output.html
+++ b/templates/output.html
@@ -15,8 +15,10 @@
 <h3>Интервал: {{interval}}</h3>
 
     <div>
+        <img src="{{SPC}}">
         <img src="{{MCAD}}">
         <img src="{{RSI}}">
+        <img src="{{STD}}">
     </div>
 
  <br>
