--- a/templates/output.html
+++ b/templates/output.html
@@ -16,7 +16,7 @@
 
     <div>
         <img src="{{SPC}}">
-        <img src="{{MCAD}}">
+        <img src="{{MACD}}">
         <img src="{{RSI}}">
         <img src="{{STD}}">
     </div>
